<resources>
    <string name="app_name">Ejemplo 3.1</string>
    <string name="t_user">Usuario</string>
    <string name="t_password">Contraseña</string>
    <string name="h_user">Introduce DNI</string>
    <string name="h_password">Introduce password</string>
    <string name="acceder">Acceder</string>
    <string name="alumnoTTA">Alumno de TTA</string>
    <string name="nuevoTest">Nuevo Test</string>
    <string name="nuevoEjercicio">Nuevo ejercicio</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="button_send">Enviar</string>
    <string name="button_advice">Ver ayuda</string>
    <string name="record_video">Grabar video</string>
    <string name="record_audio">Grabar audio</string>
    <string name="take_photo">Sacar foto</string>
    <string name="send_file">Subir fichero</string>
    <string name="evaluacionTTA">Evaluacion de TTA</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="preguntaTest">¿Cuál de las siguientes opciones NO se indica en el fichero de manifiesto de la app?</string>
    <string name="texto_ayuda">The manifest describes the components of the application: the activities, services, broadcast receivers, and content providers that the application is composed of. It names the classes that implement each of the components and publishes their capabilities (for example, which Intent messages they can handle). These declarations let the Android system know what the components are and under what conditions they can be launched.</string>
    <string name="no_camera">No hay cámara</string>
    <string name="no_app">No hay una app disponible</string>
    <string name="no_micro">No hay micrófono</string>
    <string name="badPassword">Contraseña errónea</string>
</resources>
