<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="es.tta.ejemplo31.MainActivity">

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:id="@+id/tLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_user" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_user" />

        <TextView
            android:id="@+id/tPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_password" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_password"
            android:inputType="textPassword" />
    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceder"
        android:onClick="login"/>

</LinearLayout>
