<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.tta.ejemplo31.MenuActivity">

    <TextView
        android:id="@+id/menu_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/menu_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Leccion 0"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevoTest"
        android:onClick="test"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevoEjercicio"
        android:onClick="ejercicio"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seguimiento"
        android:onClick="seguimiento"/>
</LinearLayout>
